--- a/internet-tv.html
+++ b/internet-tv.html
@@ -306,7 +306,7 @@
 						<div class="three">Каналы</div>
 						<div class="four">Стоимость</div>
 					</div>
-					<div class="tariff-line tariff-line_selected clearfix">
+					<div class="tariff-line tariff-line_radio tariff-line_selected clearfix">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">2 в 1 Продвинутый</div>
@@ -420,7 +420,7 @@
 						</div>
 					</div>
 
-					<div class="tariff-line clearfix">
+					<div class="tariff-line tariff-line_radio clearfix">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">2 в 1 Оптимальный</div>
@@ -528,7 +528,7 @@
 						</div>
 					</div>
 
-					<div class="tariff-line clearfix">
+					<div class="tariff-line tariff-line_radio clearfix">
 						<div class="tariff-title">
 							<div class="tariff-title-container"><div class="tariff-title-cont">
 								<div class="title">2 в 1 Стартовый</div>
