--- a/movies.html
+++ b/movies.html
@@ -896,5 +896,45 @@
       </div>
     </section>
 
-  </body>
+    <footer class="footer">
+      <div class="line clearfix">
+        <div class="footer-right">
+          <div class="footer-search">
+            <input type="text" class="search-text" placeholder="Что-то ищите?">
+          </div>
+          <div class="social-links">
+            <a href="#" class="facebook"></a>
+            <a href="#" class="twitter"></a>
+            <a href="#" class="vk"></a>
+            <a href="#" class="youtube"></a>
+          </div>
+        </div>
+        <div class="footer-menus">
+          <nav>
+            <ul>
+              <li><a href="#">Тарифы и услуги</a></li>
+              <li><a href="#">Дополнительные услуги</a></li>
+              <li><a href="#">Оборудование</a></li>
+              <li><a href="#">Список каналов</a></li>
+              <li><a href="#">Onlime-бонус</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Офисы</a></li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Документы</a></li>
+              <li><a href="#">Вакансии</a></li>
+              <li><a href="#">Акции</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Помощь</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Форум</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer-copy">© 2015 ОАО «Ростелеком». Все права защищены.</div>
+      </div>
+    </footer>
+  </div>
+</body>
 </html>
