--- a/movies.html
+++ b/movies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Интернет</title>
+  <title>Видеопрокат</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=1">
   <link rel="stylesheet" href="css/slick.css">
@@ -203,7 +203,7 @@
       <div class="line">
         <nav class="breadcrumb">
           <a href="#" class="home"></a>
-          <a href="#"><span>Интернет</span></a>
+          <a href="#"><span>Видеопрокат</span></a>
         </nav>
       </div>
     </section>
