--- a/phone-another.html
+++ b/phone-another.html
@@ -219,59 +219,59 @@
     <section class="line change-title">
       <div class="title">Домашний телефон</div>
     </section>
-
-    <section class="line_small section-top p-features">
-      <div class="p-features__row clearfix">
-        <div class="p-features__col">
-          <div class="p-feature">
-            <div class="p-feature__icon">
+    <!--phone-features-->
+    <section class="line_small section-top">
+      <div class="layout-grid__row">
+        <div class="layout-grid__column layout-grid__column_1_2">
+          <div class="phone-feature">
+            <div class="phone-feature__icon">
               <img src="images/p-feature-1.png" srcset="images/p-feature-1.2x.png 2x" alt="" />
             </div>
-            <div class="p-feature__name">Доступные тарифы</div>
-            <p class="p-feature__description">Самая дешевая телефонная связь,<br>а также отсутствие платы за Абонентскую<br>линию – оплачиваются только разговоры!</p>
-            <div class="p-feature__action">
+            <div class="phone-feature__name">Доступные тарифы</div>
+            <p class="phone-feature__description">Самая дешевая телефонная связь,<br>а также отсутствие платы за Абонентскую<br>линию – оплачиваются только разговоры!</p>
+            <div class="phone-feature__action">
               <a href="#" class="btn">
                 <span>Подключить услугу</span>
               </a>
             </div>
           </div>
         </div>
-        <div class="p-features__col">
-          <div class="p-feature">
-            <div class="p-feature__icon">
+        <div class="layout-grid__column layout-grid__column_1_2">
+          <div class="phone-feature">
+            <div class="phone-feature__icon">
               <img src="images/p-feature-2.png" srcset="images/p-feature-2.2x.png 2x" alt="" />
             </div>
-            <div class="p-feature__name">Дополнительные услуги</div>
-            <p class="p-feature__description">Абонентам доступен набор бесплатных<br>и платных услуг, которыми они могут<br>управлять в режиме Онлайн</p>
-            <div class="p-feature__action">
+            <div class="phone-feature__name">Дополнительные услуги</div>
+            <p class="phone-feature__description">Абонентам доступен набор бесплатных<br>и платных услуг, которыми они могут<br>управлять в режиме Онлайн</p>
+            <div class="phone-feature__action">
               <a href="#" class="btn">
                 <span>Подключить услугу</span>
               </a>
             </div>
           </div>
         </div>
-        <div class="p-features__col">
-          <div class="p-feature">
-            <div class="p-feature__icon">
+        <div class="layout-grid__column layout-grid__column_1_2">
+          <div class="phone-feature">
+            <div class="phone-feature__icon">
               <img src="images/p-feature-3.png" srcset="images/p-feature-3.2x.png 2x" alt="" />
             </div>
-            <div class="p-feature__name">Ноль внутри сети</div>
-            <p class="p-feature__description">Звоните на номера абонентов Ростелеком<br>по всей России по цене от 0 рублей!* Подробная<br>информация в разделе дополнительных опций</p>
-            <div class="p-feature__action">
+            <div class="phone-feature__name">Ноль внутри сети</div>
+            <p class="phone-feature__description">Звоните на номера абонентов Ростелеком<br>по всей России по цене от 0 рублей!* Подробная<br>информация в разделе дополнительных опций</p>
+            <div class="phone-feature__action">
               <a href="#" class="btn">
                 <span>Подключить услугу</span>
               </a>
             </div>
           </div>
         </div>
-        <div class="p-features__col">
-          <div class="p-feature">
-            <div class="p-feature__icon">
+        <div class="layout-grid__column layout-grid__column_1_2">
+          <div class="phone-feature">
+            <div class="phone-feature__icon">
               <img src="images/p-feature-4.png" srcset="images/p-feature-4.2x.png 2x" alt="" />
             </div>
-            <div class="p-feature__name">Свое оборудование</div>
-            <p class="p-feature__description">Персональное оборудование и мобильные<br>устройства Абонента могут быть<br>подключены к сети ОнЛайм</p>
-            <div class="p-feature__action">
+            <div class="phone-feature__name">Свое оборудование</div>
+            <p class="phone-feature__description">Персональное оборудование и мобильные<br>устройства Абонента могут быть<br>подключены к сети ОнЛайм</p>
+            <div class="phone-feature__action">
               <a href="#" class="btn">
                 <span>Подключить услугу</span>
               </a>
@@ -280,7 +280,7 @@
         </div>
       </div>
     </section>
-
+    <!--/phone-features-->
 
     <section class="line change-title">
       <div class="title">Выберите подходящий тариф</div>
@@ -543,6 +543,22 @@
             <li><a href="#">Дополнительная опция 2</a></li>
           </ul>
           <div class="ap-options__tabs">
+            <div class="ap-options__tab clearfix active">
+              <div class="ap-options__icon">
+                <img src="images/aon.png" srcset="images/aon.2x.png 2x" alt="" />
+              </div>
+              <div class="ap-options__description">
+                <p class="p_light">АОН - автоматическое определение номера. Услуга позволяет определить номер вызывающего абонента.<br>Для использования этой услуги абоненту требуется иметь телефонный аппарат с функцией «Caller ID».</p>
+              </div>
+            </div>
+            <div class="ap-options__tab clearfix">
+              <div class="ap-options__icon">
+                <img src="images/aon.png" srcset="images/aon.2x.png 2x" alt="" />
+              </div>
+              <div class="ap-options__description">
+                <p class="p_light">АОН - автоматическое определение номера. Услуга позволяет определить номер вызывающего абонента.<br>Для использования этой услуги абоненту требуется иметь телефонный аппарат с функцией «Caller ID».</p>
+              </div>
+            </div>
             <div class="ap-options__tab clearfix">
               <div class="ap-options__icon">
                 <img src="images/aon.png" srcset="images/aon.2x.png 2x" alt="" />
@@ -562,32 +578,38 @@
     </section>
 
     <section class="line_small section-top">
-      <div class="sp-examples__row clearfix">
-        <div class="sp-examples__col">
-          <div class="sp-example">
-            <h4>Обычный телефонный аппарат</h4>
-            <div class="sp-example__icon">
+      <div class="layout-grid__row">
+        <div class="layout-grid__column layout-grid__column_1_3">
+          <div class="phone-service">
+            <div class="phone-service__name">Обычный телефонный аппарат</div>
+            <div class="phone-service__icon">
               <img src="images/sp-1.png" srcset="images/sp-1.2x.png 2x" alt="" />
             </div>
-            <p class="p_light">Для подключения обычного телефона используется оборудование ОнЛайм — <a href="#">VOIP-шлюз</a> или <a href="#">VoIP шлюз</a>.</p>
+            <div class="phone-service__description">
+              <p>Для подключения обычного телефона используется оборудование ОнЛайм — <a href="#">VOIP-шлюз</a> или <a href="#">VoIP шлюз</a>.</p>
+            </div>
           </div>
         </div>
-        <div class="sp-examples__col">
-          <div class="sp-example">
-            <h4>SIP телефон</h4>
-            <div class="sp-example__icon">
+        <div class="layout-grid__column layout-grid__column_1_3">
+          <div class="phone-service">
+            <div class="phone-service__name">SIP телефон</div>
+            <div class="phone-service__icon">
               <img src="images/sp-2.png" srcset="images/sp-2.2x.png 2x" alt="" />
             </div>
-            <p class="p_light">SIP телефон подключается напрямуюк интернету ОнЛайм. Перечень рекомендованного оборудованияи инструкция по настройке указаныв разделе <a href="#">«Помощь и настройка»</a>.</p>
+            <div class="phone-service__description">
+              <p>SIP телефон подключается напрямуюк интернету ОнЛайм. Перечень рекомендованного оборудованияи инструкция по настройке указаныв разделе <a href="#">«Помощь и настройка»</a>.</p>
+            </div>
           </div>
         </div>
-        <div class="sp-examples__col">
-          <div class="sp-example">
-            <h4>Смартфон, планшет, ноутбук</h4>
-            <div class="sp-example__icon">
+        <div class="layout-grid__column layout-grid__column_1_3">
+          <div class="phone-service">
+            <div class="phone-service__name">Смартфон, планшет, ноутбук</div>
+            <div class="phone-service__icon">
               <img src="images/sp-3.png" srcset="images/sp-3.2x.png 2x" alt="" />
             </div>
-            <p class="p_light">Для использования смартфона, планшета или ПК необходимо установить специальное программное обеспечение (SIP ПО). Ваши устройства должны быть подключены к интернету ОнЛайм. Перечень рекомендованного SIP ПОи инструкции по настройке указаныв разделе <a href="#">«Помощь и настройка»</a>.</p>
+            <div class="phone-service__description">
+              <p>Для использования смартфона, планшета или ПК необходимо установить специальное программное обеспечение (SIP ПО). Ваши устройства должны быть подключены к интернету ОнЛайм. Перечень рекомендованного SIP ПОи инструкции по настройке указаныв разделе <a href="#">«Помощь и настройка»</a>.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -619,13 +641,13 @@
 
   <section class="b-article b-article_gradient b-article_bottom">
     <div class="line_small section-top">
-      <div class="b-article__row clearfix">
-        <div class="b-article__col">
+      <div class="layout-grid__row">
+        <div class="layout-grid__column layout-grid__column_1_2">
           <div class="b-article__image">
             <img src="images/modem.png" srcset="images/modem.2x.png 2x" alt="" />
           </div>
         </div>
-        <div class="b-article__col">
+        <div class="layout-grid__column layout-grid__column_1_2">
           <h2 class="b-article__name">Upvel UV-AT101</h2>
           <div class="b-article__content">
             <p>Голосовой шлюз UV-AT101 объединяет в себе функции роутера и VoIP-адаптера, позволяя одновременно подключать к сети Интернет телефон и компьютер.</p>
