--- a/phone-another.html
+++ b/phone-another.html
@@ -415,6 +415,160 @@
             </tr>
           </tbody>
         </table>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Повременный</div>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Исходящие</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Сверх трафика</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0,46</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Абон. плата</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мес.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Комбинированный</div>
+                <p class="b-tariff__description">300 минут городских соединений</p>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Исходящие</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Сверх трафика</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0,38</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Абон. плата</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">125</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мес.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Безлимитный</div>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Исходящие</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Сверх трафика</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">0</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Абон. плата</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">278</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мес.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="tariff-table__section">
         <div class="tariff-table__name">
@@ -510,6 +664,127 @@
             </tr>
           </tbody>
         </table>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Единый</div>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Междугородние</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">2,20</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Международные</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">9,50</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <a href="#" class="btn-light"><span>Подробнее о тарифе</span></a>
+          </div>
+        </div>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Preselect</div>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Междугородние</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">2,20</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Международные</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">9,50</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <a href="#" class="btn-light"><span>Подробнее о тарифе</span></a>
+          </div>
+        </div>
+        <div class="tariff-small">
+          <div class="tariff-title sevice-title">
+            <div class="tariff-title-container">
+              <div class="tariff-title-cont">
+                <div class="title">Hot-Choise</div>
+              </div>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Междугородние</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">2,20</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <div class="left">
+              <div class="tariff-small-label">Международные</div>
+            </div>
+            <div class="right">
+              <span class="tariff-numbers">
+                <span class="num">9,50</span>
+                <span class="unit">
+                  <span class="unit-top">руб.</span>
+                  <span class="unit-bottom">мин.</span>
+                </span>
+              </span>
+            </div>
+          </div>
+          <div class="tariff-small-line strong">
+            <a href="#" class="btn-light"><span>Подробнее о тарифе</span></a>
+          </div>
+        </div>
+
       </div>
     </section>
 
