--- a/movies.html
+++ b/movies.html
@@ -436,11 +436,18 @@
                   <div class="movies-filter__row">
                     <select class="styler" name="" data-placeholder="Страна">
                       <option></option>
-                      <option value="3">СССР</option>
-                      <option value="1">Россия</option>
-                      <option value="2">США</option>
-                      <option value="3">Франция</option>
+                      <option value="3">Австрия</option>
+                      <option value="1">Аргентина</option>
+                      <option value="2">Бельгия</option>
+                      <option value="3">Бразилия</option>
+                      <option value="3">Великобритания</option>
                     </select>
+                  </div>
+                  <div class="movies-filter__row">
+                    <div class="movies-filter__range">
+                      <label for="">Год премьеры: <span class="movies-filter__range-from">1980</span> – <span class="movies-filter__range-to">2010</span></label>
+                      <div class="movies-filter__slider"></div>
+                    </div>
                   </div>
                   <div class="movies-filter__row movies-filter__row_wide">
                     <div class="layout-grid__row">
@@ -452,12 +459,6 @@
                         <input id="3D" class="styler" type="checkbox" name="name" value="">
                         <label for="3D">3D</label>
                       </div>
-                    </div>
-                  </div>
-                  <div class="movies-filter__row">
-                    <div class="movies-filter__range">
-                      <label for="">Год премьеры: <span class="movies-filter__range-from">1980</span> – <span class="movies-filter__range-to">2010</span></label>
-                      <div class="movies-filter__slider"></div>
                     </div>
                   </div>
                   <div class="movies-filter__row">
