--- a/movies.html
+++ b/movies.html
@@ -475,6 +475,25 @@
           </div>
         </div>
         <div class="layout-grid__column layout-grid__column_640">
+          <div class="movies-subscription">
+            <div class="layout-grid__row">
+              <div class="layout-grid__column layout-grid__column_left">
+                <div class="movies-subscription__logo">
+                  <img src="images/playtv.png" srcset="images/playtv.2x.png 2x" alt="">
+                </div>
+              </div>
+              <div class="layout-grid__column layout-grid__column_right">
+                <h2>TV1000Play</h2>
+                <p class="p p_light">Смотрите без ограничений лучшие фильмы от ведущих голливудских студий, включая новинки кинопроката. Фильмы обновляются каждую неделю.</p>
+                <br>
+                <a href="#" class="fake-link">Часто задаваемые вопросы</a>
+                <br>
+                <a href="" class="btn movie__btn movie__btn_buy">
+                  <span>Подписаться за 199 руб/мес</span>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="movies-group">
             <div class="movies-group__head clearfix">
               <h2 class="movies-group__name">Новинки кино</h2>
